--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,9 @@
     <title>Piano</title>
   </head>
   <body>
+    <div class="buttons">
+      <button class="record-button btn">Record</button>
+    </div>
     <div class="piano">
       <div data-note="C" class="key white"></div>
       <div data-note="Db" class="key black"></div>
