--- a/public/styles.css
+++ b/public/styles.css
@@ -8,13 +8,14 @@ body {
   background-color: #a0522d;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .piano {
   display: flex;
-  justify-content: center;
 }
 
 .key {
@@ -42,4 +43,42 @@ body {
 
 .black.active {
   background-color: #333;
+}
+
+.buttons {
+  margin-bottom: 2rem;
+  display: flex;
+}
+
+.btn {
+  --hue: 100;
+  --saturation: 100%;
+
+  padding: 0.5rem 1rem;
+  border: none;
+  background-color: hsl(var(--hue), var(--saturation), 50%);
+  font-size: 2rem;
+  margin-left: 1rem;
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 0.5rem;
+}
+
+.btn:first-child {
+  margin-left: 0;
+}
+
+.btn:hover,
+.btn:focus {
+  background-color: hsl(var(--hue), var(--saturation), 30%);
+}
+
+.record-button {
+  --hue: 0;
+  --saturation: 0%;
+}
+
+.record-button.active {
+  --saturation: 100%;
 }
