--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,8 @@
   <body>
     <div class="buttons">
       <button class="record-button btn">Record</button>
+      <button class="play-button btn">Play</button>
+      <button class="save-button btn">Save</button>
     </div>
     <div class="piano">
       <div data-note="C" class="key white"></div>
